# sfmp

./: Cargo.toml  README.md
models/: feature_extractor.onnx
src/: cli.rs  feature_extractor.rs  main.rs  sfmp.rs
